syntax = "proto3";

package v2fly.core.proxy.freedom;
option csharp_namespace = "v2fly.Core.Proxy.Freedom";
option go_package = "github.com/robovpn/github.com/robovpn/v2fly_core/proxy/freedom";
option java_package = "com.v2fly.core.proxy.freedom";
option java_multiple_files = true;

import "common/protocol/server_spec.proto";
import "common/protoext/extensions.proto";

message DestinationOverride {
  v2fly.core.common.protocol.ServerEndpoint server = 1;
}

message Config {
  enum DomainStrategy {
    AS_IS = 0;
    USE_IP = 1;
    USE_IP4 = 2;
    USE_IP6 = 3;
  }
  DomainStrategy domain_strategy = 1;
  uint32 timeout = 2 [deprecated = true];
  DestinationOverride destination_override = 3;
  uint32 user_level = 4;
}

message SimplifiedConfig {
  option (v2fly.core.common.protoext.message_opt).type = "outbound";
  option (v2fly.core.common.protoext.message_opt).short_name = "freedom";
}